# analizator-pv

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MICRO_FRONTEND_ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  SERVER_DOCUMENTATION.md  TESTING.md  debug_seasonal_npv.py  docker-compose.yml  git-guide.md  package.json  pv_optimizer_v20_fixed.html  pv_optimizer_v20_fixed.html.backup  pyproject.toml  requirements-dev.txt  run_npv_analysis.py  temp_check.js  temp_economics.js  test-services.ps1  test_bess_comparison.py  test_crystsi_2025.py  test_extrapolation_debug.py  test_new_npv_logic.py  test_npv_debug.py  test_pvsyst_comparison.py  version-info.txt
.claude/: settings.local.json
deployment/: build.bat  build.sh  deploy-docker.sh  deploy-k8s.sh
docs/: BESS_DOKUMENTACJA_TECHNICZNA.md  BESS_TECHNICAL_DOCUMENTATION.md  MODEL_BESS_ANALIZA_PROFILU.md  MONTE_CARLO_DOKUMENTACJA_TECHNICZNA.md
k8s/: advanced-analytics-deployment.yaml  data-analysis-deployment.yaml  economics-deployment.yaml  frontend-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pv-calculation-deployment.yaml  typical-days-deployment.yaml
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: check_js_syntax.js  lint.ps1  lint.sh  smoke_test.py
services/advanced-analytics/: Dockerfile  app.py  requirements.txt
services/bess-dispatch/: Dockerfile  __init__.py  app.py  dispatch_engine.py  models.py  (+2 more)
tests/: run_all_tests.py  test_bess_light.py  test_consumption_data_flow.py
(+148 files in other folders)
